[package]
name = "qcos"
version = "0.1.0"
edition = "2021"
authors = ["bujnlc8 <75124771@qq.com>"]
description = "provide basic interface encapsulation of Tencent Cloud Object Storage (cos)"
repository = "https://github.com/bujnlc8/qcos"
license = "MIT"
keywords = ["腾讯云", "对象存储", "cos", "tengxunyun", "tencent cloud"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version="1", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.19"
ring = "0.16.20"
urlencoding = "2.1.0"
sha1 = "0.10.1"
mime = "0.3.16"
bytes ="1.1.0"
