[package]
name = "qcos"
version = "0.1.8"
edition = "2021"
authors = ["bujnlc8 <75124771@qq.com>"]
description = "provide basic interface encapsulation of Tencent Cloud Object Storage (cos)"
repository = "https://github.com/bujnlc8/qcos"
license = "MIT"
keywords = ["cos", "tengxunyun", "tencentcloud", "qcos"]

[dependencies]
reqwest = { version = "0.12", features = ["json","stream", "rustls-tls"] , default-features = false}
serde = {version="1", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4.38"
hmac-sha1 = "0.2.2"
sha1 = "0.10.6"
urlencoding = "2.1.3"
mime = "0.3.17"
bytes ="1.7.1"
quick-xml = {version = "0.36.1", features = ["serialize"]}
async-trait = "0.1.81"
tokio = { version = "1.39.2", features = ["full"]}
indicatif = { version = "0.17.8", optional = true }
futures-util = { version = "0.3.30", optional = true }
tokio-util = {version = "0.7.11", optional = true}

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"]}

[features]
progress-bar = ["indicatif", "futures-util", "tokio-util"]
